re PR c++/55800 (Link failure with thread_local in unnamed namespace)

PR c++/55800
	* decl2.c (get_tls_init_fn): Copy DECL_EXTERNAL from the variable.

From-SVN: r207360